--- a/index.html
+++ b/index.html
@@ -16,9 +16,17 @@
     <link rel="stylesheet" href="assets/css/styles.min.css">
 </head>
 
-<body style="/*background: url(&quot;design.jpg&quot;);*/background-position: 0 -60px;">
+<body id="body" style="/*background: url(&quot;design.jpg&quot;);*/background-position: 0 -60px;">
     <nav class="navbar navbar-light navbar-expand-md fixed-top navbar-shrink py-3" id="mainNav">
-        <div class="container"><img id="logo" src="assets/img/logo.png"><a class="navbar-brand d-flex align-items-center" href="/"><span></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container" id="navCol">
+            <img id="logo" src="assets/img/logo.png">
+            <a class="navbar-brand d-flex align-items-center" href="/">
+                <span></span>
+            </a>
+            <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1">
+                <span class="visually-hidden">Toggle navigation</span>
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link active" href="index.html">HOME</a></li>
@@ -29,18 +37,20 @@
                 </ul>
                 <div class="dropdown p-2 mre5"><a class="dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" href="#"><img src="assets/img/flags/gb.png"><span>&nbsp;en</span></a>
                     <div class="dropdown-menu"><a class="dropdown-item" href="#"><img src="assets/img/flags/fr.png"><span>&nbsp;fr</span></a><a class="dropdown-item" href="#"><img src="assets/img/flags/gb.png"><span>&nbsp;en</span></a></div>
-                </div><a class="btn btn-primary shadow btn-sm" role="button" id="demo" href="signup.html">DEMO</a>
+                </div>
+                <a class="btn btn-primary shadow btn-sm" role="button" id="demo" href="signup.html">DEMO</a>
+                <button class="dark-mode-toggle" onclick="darkMode()">DARK MODE</button>
             </div>
         </div>
     </nav>
-    <header class="bg-primary-gradient pt-5">
+    <header class="bg-primary-gradient pt-5" id="headerMain">
         <div class="container modal-fullscreen"><iframe allowfullscreen="" frameborder="0" class="modal-fullscreen"></iframe></div>
         <div class="container pt-4 pt-xl-5">
             <div class="row pt-5">
                 <div class="col-md-8 col-xl-6 text-center text-md-start mx-auto">
                     <div class="text-center">
                         <p class="fw-bold text-success mb-2">Flexible SmartBin Monitoring System</p>
-                        <h1 class="fw-bold">The best&nbsp;<span class="bg-success-light">&nbsp;SaaS&nbsp;</span>&nbsp;for trash removing system...</h1>
+                        <h1 class="fw-bold">The best&nbsp;<span class="most bg-success-light">&nbsp;SaaS&nbsp;</span>&nbsp;for trash removing system...</h1>
                     </div>
                 </div>
                 <div class="col-12 col-lg-10 mx-auto">
@@ -119,7 +129,9 @@
     </section>
     <section class="py-5">
         <div class="container text-center py-5">
-            <p class="mb-4" style="font-size: 1.6rem;">Used by <span class="bg-success-light p-1"><strong>most</strong></span>&nbsp;of the best companies in the world.</p><a href="#"> <img class="m-3" src="assets/img/brands/instacart.png"></a><a href="#"> <img class="m-3" src="assets/img/brands/kickstarter.png"></a><a href="#"> <img class="m-3" src="assets/img/brands/lyft.png"></a><a href="#"> <img class="m-3" src="assets/img/brands/shopify.png"></a><a href="#"> <img class="m-3" src="assets/img/brands/pinterest.png"></a><a href="#"> <img class="m-3" src="assets/img/brands/twitter.png"></a>
+            <p class="mb-4" style="font-size: 1.6rem;">Used by 
+                <span class="bg-success-light p-1 most"><strong class="most">most</strong>
+                </span>&nbsp;of the best companies in the world.</p><a href="#"> <img class="m-3" src="assets/img/brands/instacart.png"></a><a href="#"> <img class="m-3" src="assets/img/brands/kickstarter.png"></a><a href="#"> <img class="m-3" src="assets/img/brands/lyft.png"></a><a href="#"> <img class="m-3" src="assets/img/brands/shopify.png"></a><a href="#"> <img class="m-3" src="assets/img/brands/pinterest.png"></a><a href="#"> <img class="m-3" src="assets/img/brands/twitter.png"></a>
         </div>
     </section>
     <section class="py-5">
@@ -149,7 +161,7 @@
                                 </svg></div>
                             <div class="px-2">
                                 <h6 class="fw-bold mb-0">Phone</h6>
-                                <p class="text-muted mb-0">+(228) 93 07 15 34</p>
+                                <p class="text-muted mb-0 text-dark">+(228) 93 07 15 34</p>
                             </div>
                         </div>
                         <div class="d-flex align-items-center p-3">
@@ -158,7 +170,7 @@
                                 </svg></div>
                             <div class="px-2">
                                 <h6 class="fw-bold mb-0">Email</h6>
-                                <p class="text-muted mb-0">info@bedudo.com</p>
+                                <p class="text-muted mb-0 text-dark">info@bedudo.com</p>
                             </div>
                         </div>
                         <div class="d-flex align-items-center p-3">
@@ -167,7 +179,7 @@
                                 </svg></div>
                             <div class="px-2">
                                 <h6 class="fw-bold mb-0">Location</h6>
-                                <p class="text-muted mb-0">12 Example Street</p>
+                                <p class="text-muted mb-0 text-dark">12 Example Street</p>
                             </div>
                         </div>
                     </div>
@@ -190,7 +202,7 @@
             <div class="container">
                 <div class="row row-cols-1 row-cols-lg-3">
                     <div class="col">
-                        <p class="text-muted my-2">Copyright&nbsp;© 2022 Bedudo</p>
+                        <p class="text-muted my-2 text-dark">Copyright&nbsp;© 2022 Bedudo</p>
                     </div>
                     <div class="col">
                         <ul class="list-inline my-2">
@@ -224,6 +236,18 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/script.min.js"></script>
+    <script>
+        function darkMode() {
+           var element = document.getElementById('body');
+           element.classList.toggle("dark-mode");
+
+           var element = document.getElementById('mainNav');
+           element.classList.toggle("dark-mode");
+
+           var element = document.getElementById('headerMain');
+           element.classList.toggle("dark-mode");
+        }
+    </script>
 </body>
 
 </html>
