add dark mode to other pages

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
         </div>
     </nav>
-    <header class="bg-primary-gradient pt-5" id="headerMain">
+    <header class="bg-primary-gradient pt-5" C>
         <div class="container modal-fullscreen"><iframe allowfullscreen="" frameborder="0" class="modal-fullscreen"></iframe></div>
         <div class="container pt-4 pt-xl-5">
             <div class="row pt-5">
