--- a/booking.html
+++ b/booking.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="assets/css/styles.min.css">
 </head>
 
-<body style="/*background: url(&quot;design.jpg&quot;);*/background-position: 0 -60px;">
+<body id="body" style="/*background: url(&quot;design.jpg&quot;);*/background-position: 0 -60px;">
     <nav class="navbar navbar-light navbar-expand-md fixed-top navbar-shrink py-3" id="mainNav">
         <div class="container"><img id="logo" src="assets/img/logo.png"><a class="navbar-brand d-flex align-items-center" href="/"><span></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
@@ -30,6 +30,7 @@
                 <div class="dropdown p-2 mre5"><a class="dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" href="#"><img src="assets/img/flags/gb.png"><span>&nbsp;en</span></a>
                     <div class="dropdown-menu"><a class="dropdown-item" href="#"><img src="assets/img/flags/fr.png"><span>&nbsp;fr</span></a><a class="dropdown-item" href="#"><img src="assets/img/flags/gb.png"><span>&nbsp;en</span></a></div>
                 </div><a class="btn btn-primary shadow btn-sm" role="button" id="demo" href="signup.html">DEMO</a>
+                <button class="dark-mode-toggle" onclick="darkMode()">DARK MODE</button>
             </div>
         </div>
     </nav>
@@ -64,6 +65,18 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/script.min.js"></script>
+    <script>
+        function darkMode() {
+           var element = document.getElementById('body');
+           element.classList.toggle("dark-mode");
+
+           var element = document.getElementById('mainNav');
+           element.classList.toggle("dark-mode");
+
+           var element = document.getElementById('headerMain');
+           element.classList.toggle("dark-mode");
+        }
+    </script>
 </body>
 
 </html>
