--- a/pricing.html
+++ b/pricing.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="assets/css/styles.min.css">
 </head>
 
-<body>
+<body id="body">
     <nav class="navbar navbar-light navbar-expand-md fixed-top navbar-shrink py-3" id="mainNav">
         <div class="container"><img id="logo" src="assets/img/logo.png"><a class="navbar-brand d-flex align-items-center" href="/"><span></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
@@ -30,6 +30,7 @@
                 <div class="dropdown p-2 mre5"><a class="dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" href="#"><img src="assets/img/flags/gb.png"><span>&nbsp;en</span></a>
                     <div class="dropdown-menu"><a class="dropdown-item" href="#"><img src="assets/img/flags/fr.png"><span>&nbsp;fr</span></a><a class="dropdown-item" href="#"><img src="assets/img/flags/gb.png"><span>&nbsp;en</span></a></div>
                 </div><a class="btn btn-primary shadow btn-sm" role="button" id="demo" href="signup.html">DEMO</a>
+                <button class="dark-mode-toggle" onclick="darkMode()">DARK MODE</button>
             </div>
         </div>
     </nav>
@@ -47,9 +48,9 @@
                         <div class="card-body p-4">
                             <div class="d-flex justify-content-between">
                                 <div>
-                                    <h3 class="fw-bold mb-0">Basic Bundle</h3>
-                                    <p>MONTHLY SUBSCRIPTION</p>
-                                    <h4 class="display-6 fw-bold"><sup>CFA </sup>5000/mo</h4>
+                                    <h3 class="fw-bold mb-0 dark-mode-opp">Basic Bundle</h3>
+                                    <p class="dark-mode-opp">MONTHLY SUBSCRIPTION</p>
+                                    <h4 class="display-6 fw-bold dark-mode-opp"><sup>CFA </sup>5000/mo</h4>
                                 </div>
                             </div>
                             <div>
@@ -170,6 +171,18 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/script.min.js"></script>
+    <script>
+        function darkMode() {
+           var element = document.getElementById('body');
+           element.classList.toggle("dark-mode");
+
+           var element = document.getElementById('mainNav');
+           element.classList.toggle("dark-mode");
+
+           var element = document.getElementById('headerMain');
+           element.classList.toggle("dark-mode");
+        }
+    </script>
 </body>
 
 </html>
